# tuco

./: Cargo.toml
app-ssr/: Cargo.toml
backend/: Cargo.toml
backend/src/: errors.rs
backend/src/handlers/: course.rs  general.rs  tutor.rs
backend/src/models/: mod.rs  models.rs
src/: main.rs
