[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
openssl = { version = "0.10.45", features = ["vendored"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["postgres", "runtime-actix-native-tls", "macros", "chrono"] }
